cluster0-prod/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - "boutique.c0.kube8.ga"
  gateways:
  - frontend-gateway
  http:
  - match:
    - uri:
        prefix: /
      headers:
        cookie:
          regex: ^(.*?;\s)?(version=master)(;.*)?$
    route:
    - destination:
        host: frontend.boutique-production.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
      headers:
        cookie:
          regex: ^(.*?;\s)?(version=canary)(;.*)?$
    route:
    - destination:
        host: frontend.boutique-canary.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
      headers:
        cookie:
          regex: ^(.*?;\s)?(version=azure)(;.*)?$
    route:
    - destination:
        host: frontend.boutique-production.global
        port:
          number: 8080
  - match:
    - uri:
        exact: /
    route:
    - weight: 50
      destination:
        host: frontend.boutique-production.svc.cluster.local
        port:
          number: 8080
      headers:
        response:
          add:
            Set-Cookie: version=master
    - weight: 0
      destination:
        host: frontend.boutique-canary.svc.cluster.local
        port:
          number: 8080
      headers:
        response:
          add:
            Set-Cookie: version=canary
    - weight: 50
      destination:
        host: frontend.boutique-production.global
        port:
          number: 8080
      headers:
        response:
          add:
            Set-Cookie: version=azure
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend.boutique-production.svc.cluster.local
        port:
          number: 8080
      headers:
        response:
          add:
            Set-Cookie: version=master
